feat: :sparkles: Add title section with styling to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     />
   </head>
   <body>
+    <div class="title">
+      <h1>te amo <5</h1>
+    </div>
+
     <canvas id="heart"></canvas>
 
     <script src="./script.js"></script>
